--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ ul {
   --accent-color: #e7e9fc;
   --white-color: #ffffff;
   --light-color: #f4f4fd;
+  --black-color: rgba(0, 0, 0, 0.15);
 }
 
 ul li {
@@ -64,6 +65,9 @@ a {
   letter-spacing: 0.03em;
 
   margin-right: 77px;
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .logo > span {
   color: var(--brand-color);
@@ -101,6 +105,9 @@ a {
 .info-link {
   color: var(--text-color);
   letter-spacing: 0.03em;
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
 .info-link:hover,
 .info-link:focus {
@@ -128,6 +135,7 @@ a {
 }
 
 .button {
+  border: none;
   color: var(--white-color);
   background-color: var(--brand-color);
   font-weight: 600;
@@ -135,7 +143,7 @@ a {
   line-height: 1.18;
   letter-spacing: 0.04em;
   font-family: inherit;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 4px var(--black-color);
   border-radius: 4px;
   padding: 16px 32px;
   min-width: 170px;
@@ -189,6 +197,7 @@ a {
   column-gap: 24px;
 }
 .photo-list-item {
+  flex-basis: calc((100% - 48px) / 3);
 }
 
 .team-list {
@@ -198,12 +207,13 @@ a {
 }
 
 .team-list-item {
+  flex-basis: calc((100% - 72px) / 4);
 }
 .team-text {
   text-align: center;
   padding-top: 32px;
   padding-bottom: 32px;
-  background: #ffffff;
+  background: var(--white-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
@@ -231,6 +241,7 @@ a {
   color: var(--white-color);
   margin-bottom: 16px;
   display: block;
+  margin-right: 0px;
 }
 .footer-text {
   color: var(--accent-color);
@@ -239,8 +250,26 @@ a {
   display: block;
   line-height: 1.5;
 }
+.header-cont {
+  display: block;
 
+  border-bottom: 1px solid rgba(46, 47, 66, 0.08);
+}
+.filter-cont {
+  margin-bottom: 72px;
+}
+.portfolio-sctn {
+  padding-top: 96px;
+}
 .filter-list {
+  display: flex;
+  justify-content: center;
+  column-gap: 24px;
+}
+.btn {
+  padding: 12px 24px;
+  border: 1px solid #e7e9fc;
+  border-radius: 4px;
 }
 .filter-list-item {
 }
@@ -262,11 +291,30 @@ a {
   color: var(--white-color);
 }
 .cards {
+  display: flex;
+  column-gap: 24px;
+  row-gap: 48px;
+  flex-wrap: wrap;
 }
 .cards-item {
+  flex-basis: calc((100% - 48px) / 3);
 }
 .cards-text {
   color: var(--text-color);
   letter-spacing: 0.02em;
   line-height: 1.5;
+}
+
+.cards-txt {
+  padding-left: 16px;
+  text-align: left;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  background: var(--white-color);
+
+  border: 0.5px solid var(--light-color);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+.cards-img {
+  display: block;
 }
